--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "a11y and React",
+  "name": "Web Accessibility and React",
   "icons": [
     {
       "src": "favicon.ico",
